# RetailForge

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
adk_apps/retailforge/: __init__.py  agent.py
app/: __init__.py  config.py  db.py  embeddings.py  prompts.py  read_api.py  server.py
app/agents/: __init__.py  billing.py  customer_support.py  product_advisor.py  recommendation.py  root_agent.py
app/tools/: __init__.py  billing.py  catalog.py  orders.py  toolbox.py
data/: __init__.py  seed.py
data/sample/: inventory.json  orders.json  products.json  promotions.json  reviews.json  users.json
deployment/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.toolbox  cloudbuild.yaml  deploy.sh
deployment/terraform/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: cicd.md
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AddToCartButton.tsx  Badge.tsx  Navbar.tsx  PriceBlock.tsx  ProductCard.tsx  Providers.tsx  RatingStars.tsx  StoreCopilot.tsx  WishlistButton.tsx
frontend/lib/: api.ts  cart.tsx  pricing.ts  types.ts  wishlist.tsx
scripts/: download_toolbox.sh  setup-cicd.sh
submission/: README.md
submission/deck/: retailforge.tex
submission/devpost/: devpost-writeup.md
submission/diagrams/: agents.mmd  architecture.mmd  (+3 more)
tests/: conftest.py  test_billing.py  test_catalog.py  test_orders.py
toolbox/: tools.yaml
(+23 files in other folders)
