[project]
name = "retailforge"
version = "0.1.0"
description = "RetailForge - Multi-Agent Retail Intelligence System (Google ADK + MongoDB Atlas + AG-UI)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "RetailForge" }]

dependencies = [
    # Agent framework
    "google-adk>=1.16.0",
    # MongoDB MCP Toolbox client (loads tools.yaml tools into ADK)
    "toolbox-core>=0.5.0",
    # AG-UI <-> ADK bridge for the frontend
    "ag-ui-adk>=0.0.5",
    # Embeddings + Gemini client
    "google-genai>=1.0.0",
    # Database driver (seeding, read API, index creation)
    "pymongo>=4.9.0",
    # Web server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Config
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mongomock>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
